# WibeSocket

./: .gitignore  CMakeLists.txt  Makefile  README.md  ROADMAP.md  run_tests.sh
.cursor/rules/: 00_PROJECT_OVERVIEW.mdc  01_RULES.mdc  02_ARCHITECTURE.mdc  03_API.mdc  04_PYTHON_BINDINGS.mdc  05_BUILD.mdc  06_BENCHMARKS.mdc  07_TESTING.mdc  08_CI.mdc  09_PACKAGING.mdc  10_SECURITY.mdc  11_STYLE_GUIDE.mdc  config.json
.cursor/rules/src/: wibesocket.c  wibesocket.h
.github/workflows/: ci.yml
attic/: py_ultraws_module.c  wibesocket_prototype.h
bench/: RESULTS.md  bench_latency.c  bench_lws_client.c  bench_throughput.c  run_bench.py
bench/results/: latest.json
build_san/: CTestTestfile.cmake  example_simple_echo  test_handshake  test_parser  test_wibesocket
examples/: py_asyncio_echo.py  py_showcase.py  simple_echo.c
include/wibesocket/: wibesocket.h
py/: mkdocs.yml  pyproject.toml  setup.py  wibesocket_module.c  wibesocket_wrappers.py
py/docs/: index.md
py/docs/api/: asyncwebsocket.md  websocket.md
py/wibesocket/: __init__.py  wrappers.py
scripts/: dev_check.sh
src/: handshake.c  handshake.h  parser.c  wibesocket.c  wibesocket_stub.c
src/internal/: base64.c  base64.h  frame.h  ringbuf.c  ringbuf.h  sha1.c  sha1.h  utf8.c  utf8.h
tests/: test_handshake.c  test_parser.c  test_ringbuf.c  test_wibesocket.c
tests_py/: echo_server.py  test_asyncio.py  test_sync.py
