[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wibesocket"
version = "0.0.1"
description = "Minimal fast WebSocket client bindings for WibeSocket C core"
requires-python = ">=3.8"
dependencies = [
    "mkdocstrings[python-legacy]>=0.18",
]

[project.optional-dependencies]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.24"]



